2002-05-17  Mark McLoughlin  <mark@skynet.ie>

	* libgnomeui/gnome-ui-init.c: (libgnomeui_rc_parse): since
	this is called after gtk_rc_init, we need to parse the
	rc files instead of adding them to the list of files
	gtk_rc_init parses. Also removed FIXME, that I think this
	fixes.

Wed May 15 20:30:14 2002  George Lebl <jirka@5z.com>

	* libgnomeui/gnome-file-entry.c: remove dnd dest from the gtk entry and
	  setup dest on the whole file entry.  Also parse the uri list
	  differently, we can't use _is_local since it's not what I thought
	  it meant when I originally wrote this code.  So that for example
	  drops from applications:// won't work since we can so far only
	  handle files.  Also this will remove the drag_data_received from
	  being called twice because we set dest twice, etc...

	* libgnomeui/gnome-pixmap-entry.c: since the drag dest is now bound
	  on the  whole file entry and we derive from it remove it from here

	* libgnomeui/gnome-icon-entry.c: parse the uri list in the same way
	  we do for file entry now, so that we work correctly.  We really
	  need at least a little bit of vfs support so that we could snarf
	  icons out of desktop files from the vfolders.

2002-05-15  Federico Mena Quintero  <federico@ximian.com>

	* libgnomeui/gnome-icon-item.c (update_pango_layout): Use
	PANGO_WRAP_WORD most of the time, until we get a word that is
	wider than the layout width.  In this case, switch to
	PANGO_WRAP_CHAR.  Fixes #78508 in a semi-ugly way, but currently
	PangoLayout provides no other way to do this.

	* libgnomeui/gnome-icon-list.c (gil_get_items_per_line): Do a
	slightly better computation of how many icons fit in a row, by
	remembering that there are DEFAULT_COL_SPACING pixels between the
	icons and each of the left/right edges of the window.

2002-05-14  Michael Meeks  <michael@ximian.com>

	* libgnomeui/gnome-app-helper.c: 
	(create_and_popup_toolbar_menu): update string, argh,
	tolerate odd gconf key values.